--- a/templates/base.html
+++ b/templates/base.html
@@ -138,7 +138,7 @@
     <nav class="navbar navbar-expand-md navbar-primary bg-primary">
         <div class="container">
             <h1><a href="{% url 'index' %}" class="navbar-brand">
-            <strong style="color:white">GALVANIC</strong></a></h1>
+            <strong style="color:white">Blahblah</strong></a></h1>
             <div class="collapse navbar-collapse">
                 <a href="{% url 'index' %}" class="btn btn-outline-light mt-2 mx-1">HOME</a>
                 <a href="{% url 'all_songs' %}" class="btn btn-outline-light mt-2 mx-1">ALL SONGS</a>
