--- a/templates/musicapp/detail.html
+++ b/templates/musicapp/detail.html
@@ -24,7 +24,7 @@
     </div>
     {% else %}
     <div class="alert alert-success">
-    <strong>Success!</strong> {{message}}
+    <strong>success</strong> {{message}}
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>   
@@ -130,58 +130,98 @@
     </div>
 </div>
 <!--!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!-->
+<br>
 <div class="comment_submit">
     <form method="post">
         {% csrf_token %}
-        <span class="d-flex align-items-center mt-2 ml-2">
+        <span class="d-flex align-items-start mt-2 ml-2">
             <!-- <i class="heart fa fa-heart my-auto"></i> -->
-            <span>comments</span><textarea name="comment" id="comment" cols="60" rows="6"></textarea>
-            <button type="submit"  class="btn btn-danger btn-block"
-                style="width: 358px;margin-left:-8px;background-color: red;"><i class="heart fa fa-heart-o my-auto" style="color:rgb(26, 102, 208)"></i> Submit</button>
+            <div class="textarea">
+                <textarea name="comment" id="comment" cols="130" rows="3"  style="border-radius:25px"
+                    input type="text" placeholder="please leave your comments here"/ ></textarea>
+            </div>
+            <button type="submit" class="btn btn-danger btn-block"
+             style="width: 100px;margin-left:8px;margin-top:20px;background-color: red;">Subimt</button>
 
             <!-- <input type="submit" id="favbtn" class="btn btn-primary" name="add-fav" value="Add to Favourites"> -->
         </span>
     </form>          
 
 </div>
+<br>
+<br>
+<br>
+<br>
 
 <div class="comment_diplay">
-    <h4>comment area</h4>
+    <h3>comment area</h3>
     {% if all_comments %}
     {% for comment in all_comments %}  
-    <div class="user_name">
-        <h3>user:{{comment.user.username}}</h3>
-    </div> 
-    <div class="comment_text">
-        <h3>comment text:{{comment.text}}</h3>
-    </div> 
-    <div class="comment_time">
-        <h3>time:{{comment.date}}</h3>
-    </div> 
+      <div class="messege">
+        <div class="user_name" style="float:left">
+            <p>{{comment.user.username}}</p>
+        </div> 
+        <div class="comment_text" style="float:left">
+            <p> {{comment.text}}</p>
+        </div> 
+        <div class="comment_time" align="left" style="clear:both;color:gray;margin-left:10px">
+            <p>time: {{comment.date}}</p>
+        </div> 
+      </div>
     {% endfor %}
     {% else %}
     <h3>no comments for this song now!Come and comment above!</h3>
     {% endif %}
 </div>
-<!--!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!-->
 
+<!--!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!-->
+/**********************/
 <footer class="footer">
     <div class="player" style="padding-left: 10px;padding-top:10px;background-color: #459dfb;">
-        <div class="left"><img src="{{last_played.album.cover.url}}" height="90" width="90"
-                style="border-radius: 10px 10px 10px 10px;"></div>
+        <div class="left" >
+             <img src="{{last_played.album.cover.url}}" height="90" width="90"
+                style="border-radius: 100%;" id="musicico" onclick="musiccc()"></div>
         <div class="right">
             <div class="top">
-                <a class="song" style="margin-left: 15px;color: white;">{{last_played.name}}</a>
+                <a class="song"  style="margin-left: 15px;color: white;">{{last_played.name}}</a>
                 <a class="artist" style="margin-left: 15px;color:white">{{last_played.album.name}}</a>
             </div>
-            <div class="bottom">
-                <audio controls="" _autoplay="" name="media"
-                    style="margin-left: 20px;margin-bottom: 10px;width: 1245px;height:30px">
-                    <source src="{{last_played.song_file.url}}" type="audio/mpeg"></audio>
+            <div class="bottom"  >
+               <button onclick="musiccc()" style="margin-left:36px ;margin-top:12px;margin-bottom:10px;
+                    width: 34px;height:26px;border: none;border-radius: 100%; z-index:0;"></button>
+                <audio controls=false  _autoplay=""  name="media" id="music"
+                    style="margin-left: -44px;margin-top: 10px;width: 1245px;height:30px;pointer-events:none;">
+                    <source src="{{last_played.song_file.url}}" type="audio/mpeg" ></audio>
             </div>
         </div>
     </div>
 </footer>
 
+<script>
+// 动画旋转
+var music = document.getElementById('music')    //获取音乐
+var musicico = document.getElementById('musicico')   //获取音乐图标
+var tem = false  //设置一个变量，用来控制音乐是否在播放。
+document.getElementById('musicico').style.animationPlayState = 'paused'
+
+
+//定义一个函数，当用户单击的时候触发这个函数，从而实现音乐的暂停与播放。
+function musiccc(){
+	//tem用来控制音乐当前是否在播放。true代表音乐正在播放，false代表音乐当前正在处于暂停的状态。
+	if(tem == true){
+           music.pause()  //暂停音乐
+		tem = false
+		document.getElementById('musicico').style.animationPlayState = 'paused'  //暂停音乐图标
+		
+	}else{
+		music.play()  //播放音乐
+		tem = true  
+		document.getElementById('musicico').style.animationPlayState = 'running'  //播放音乐图标
+	}
+}
+
+</script>
+/**********************/
 {% endblock body %}
+
 
