--- a/templates/musicapp/recent.html
+++ b/templates/musicapp/recent.html
@@ -55,22 +55,51 @@
 <br>
 <br>
 <br>
+/**********************/
 <footer class="footer">
-  <div class="player" style="padding-left: 10px;padding-top:10px;background-color: #459dfb;">
-    <div class="left"><img src="{{last_played.album.cover.url}}" height="90" width="90"
-        style="border-radius: 10px 10px 10px 10px;"></div>
-    <div class="right">
-      <div class="top">
-        <a class="song" style="margin-left: 15px;color: white;">{{last_played.name}}</a>
-        <a class="artist" style="margin-left: 15px;color:white">{{last_played.album.name}}</a>
-      </div>
-      <div class="bottom">
-        <audio controls="" autoplay name="media"
-          style="margin-left: 20px;margin-bottom: 10px;width: 1230px;height:30px">
-          <source src="{{last_played.song_file.url}}" type="audio/mpeg"></audio>
-      </div>
+    <div class="player" style="padding-left: 10px;padding-top:10px;background-color: #459dfb;">
+        <div class="left" >
+             <img src="{{last_played.album.cover.url}}" height="90" width="90"
+                style="border-radius: 100%;" id="musicico" onclick="musiccc()"></div>
+        <div class="right">
+            <div class="top">
+                <a class="song"  style="margin-left: 15px;color: white;">{{last_played.name}}</a>
+                <a class="artist" style="margin-left: 15px;color:white">{{last_played.album.name}}</a>
+            </div>
+            <div class="bottom"  >
+               <button onclick="musiccc()" style="margin-left:36px ;margin-top:12px;margin-bottom:10px;
+                    width: 34px;height:26px;border: none;border-radius: 100%; z-index:0;"></button>
+                <audio controls=false  _autoplay=""  name="media" id="music"
+                    style="margin-left: -44px;margin-top: 10px;width: 1245px;height:30px;pointer-events:none;">
+                    <source src="{{last_played.song_file.url}}" type="audio/mpeg" ></audio>
+            </div>
+        </div>
     </div>
-  </div>
 </footer>
 
+<script>
+// 动画旋转
+var music = document.getElementById('music')    //获取音乐
+var musicico = document.getElementById('musicico')   //获取音乐图标
+var tem = false  //设置一个变量，用来控制音乐是否在播放。
+document.getElementById('musicico').style.animationPlayState = 'paused'
+
+
+//定义一个函数，当用户单击的时候触发这个函数，从而实现音乐的暂停与播放。
+function musiccc(){
+	//tem用来控制音乐当前是否在播放。true代表音乐正在播放，false代表音乐当前正在处于暂停的状态。
+	if(tem == true){
+           music.pause()  //暂停音乐
+		tem = false
+		document.getElementById('musicico').style.animationPlayState = 'paused'  //暂停音乐图标
+		
+	}else{
+		music.play()  //播放音乐
+		tem = true  
+		document.getElementById('musicico').style.animationPlayState = 'running'  //播放音乐图标
+	}
+}
+
+</script>
+/**********************/
 {% endblock body %}
